Fix regression: double "..." button on small devices
* Regression in 18bfe04c
* Extended playwright to include a screenshot for this case

--- a/src/scss/components/_searchbar.scss
+++ b/src/scss/components/_searchbar.scss
@@ -13,8 +13,7 @@
 	padding: 0 $default-padding-x-touch;
 	background: var(--color-toolbar);
 	z-index: $z-index-search-bar;
-	@include hairline(top, "color-shade-4");
-	@include hairline(bottom, "color-shade-4");
+	position: relative;
 
 	.input-group.search {
 		margin: 0 $default-padding-x-touch 0 (-$default-padding-x-touch + $space-min);
